  `WorkingTree.open_containing_paths`.
  (Martin Pool)

New Features
************

Bug Fixes
*********

* Check if both --diff-options and --using are set, and exit with error
  in this case. (Matthäus G. Chajdas, #234708)

* Don't print internal object name when print an invalid revision spec
  error.  (Neil Martinsen-Burrell, #598701)

* `PathNotChild` should not give a traceback.
  (Martin Pool, #98735)

* ``Transport.stat`` on a symlink, including a transport pointing directly
  to a symlink, now returns information about the symlink.
  (Martin Pool)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2rc1
##########

:Codename: ???
:2.2rc1: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

* Configuration files in ``${BZR_HOME}`` are now written in an atomic
  way which should help avoid problems with concurrent writers.
  (Vincent Ladeuil, #525571)

* Don't traceback trying to unversion children files of an already
  unversioned directory.  (Vincent Ladeuil, #494221)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2b4
#########

:Codename: Monkey Magic
:2.2b4: 2004-07-09


This fourth and final beta in the 2.2 series now stabilizes the internal
APIs. Plugin authors are recommended to ensure their releases are
compatible, so that 2.2rc1 can be a true release candidate, containing
stable and compatible plugin versions. 

For users of bzrlib as a library, one of the primary changes is to request
that they call ``bzrlib.initialize`` and use the returned context manager
appropriately.

Better interaction with ``bzr-loom`` to make sure branching from a loom
even over a smart server still yields a local loom. Not to mention lots of
bugfixes over 2.2b3.

Compatibility Breaks
********************
